--- a/drought_predictor.ipynb
+++ b/drought_predictor.ipynb
@@ -7,13 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(1, '/home/amalrajn/transformer_drought_prediction')\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "#add from statements "
+    "from transformer_implementation import TransformerModel, train_model, evaluate_model\n",
+    "from data_handle import TimeSeriesDataset, load_data"
    ]
   },
   {
@@ -23,32 +25,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wdir = \"path_to_data_directory\"  # Set your data directory path\n",
+    "wdir = \"/home/amalrajn/transformer_drought_prediction\"  # Set your data directory path\n",
     "\n",
-    "    # Load data\n",
-    "    train_loader, val_loader, test_loader = load_data(wdir)\n",
+    "# Load data\n",
+    "train_loader, val_loader, test_loader = load_data(wdir)\n",
     "\n",
-    "    # Model hyperparameters\n",
-    "    input_dim = 16  # Adjust based on the number of features in your CSV\n",
-    "    model_dim = 64\n",
-    "    num_head = 4\n",
-    "    num_encoder_layers = 3\n",
-    "    num_decoder_layers = 3\n",
-    "    dim_feedforward = 128\n",
-    "    dropout = 0.1\n",
-    "    num_epochs = 50\n",
-    "    learning_rate = 0.001\n",
-    "    batch_size = 32\n",
+    "# Model hyperparameters\n",
+    "input_dim = 16  # Adjust based on the number of features in your CSV\n",
+    "model_dim = 64\n",
+    "num_head = 4\n",
+    "num_encoder_layers = 3\n",
+    "num_decoder_layers = 3\n",
+    "dim_feedforward = 128\n",
+    "dropout = 0.1\n",
+    "num_epochs = 50\n",
+    "learning_rate = 0.001\n",
+    "batch_size = 32\n",
     "\n",
-    "    # Initialize model\n",
-    "    model = TransformerModel(input_dim, model_dim, num_head, num_encoder_layers, num_decoder_layers, dim_feedforward, dropout)\n",
+    "# Initialize model\n",
+    "model = TransformerModel(input_dim, model_dim, num_head, num_encoder_layers, num_decoder_layers, dim_feedforward, dropout)\n",
     "\n",
-    "    # Train model\n",
-    "    model.train_model(train_loader, val_loader, num_epochs, learning_rate)\n",
+    "# Train model\n",
+    "train_model(train_loader, val_loader, num_epochs, learning_rate)\n",
     "\n",
-    "    # Evaluate model\n",
-    "    model.evaluate_model(test_loader)"
+    "# Evaluate model\n",
+    "evaluate_model(test_loader)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a8b1ba8-b482-4845-b954-510df094bef6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
